amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/empty-input-type.api.report
ModelId: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/empty-input-type.api.graphql
Profile: GraphQL
Conforms: true
Number of results: 0
